--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/extent.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/extent.html.twig
@@ -8,11 +8,10 @@
             <tr>
                 <td valign="top">
                     <div id="nonspatial" style="display:none;width:500px;margin:15px;">
-                        <label for="cgeoloc"><b>Study Area Description: </b></label>
-                        <textarea id="deschere" rows="5" style="width:100%;"></textarea>
+                        {{ form_row(form.spatialExtentDescription) }}
                     </div>
                     <div id="spatial">
-                        <label for="cgeoloc"><b><em>*</em>Spatial Extent </b></label>
+                        <label><span class="emRequired"/>Spatial Extent</label>
                         <div>
                             <div style="width:500px;height:300px;" id="smlMDEMap"/>
                         </div>
@@ -25,8 +24,7 @@
             </tr>
             <tr>
                 <td>
-                    <label for="TM1"><em>*</em>Time Period Description</label>
-                <input class="required" type="text" id="TM1" size="80" name="gml-description"/>
+                    {{ form_row(form.temporalExtentDesc) }}
                 </td>
                 <td>
                     <span class="field-help">
