--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/extent.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/extent.html.twig
@@ -7,7 +7,7 @@
         <table class="tab-table">
             <tr>
                 <td valign="top">
-                    <div id="nonspatial" style="display:none;width:500px;margin:15px;">
+                    <div id="nonspatial">
                         {{ form_row(form.spatialExtentDescription) }}
                     </div>
                     <div id="spatial">
