--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
@@ -71,37 +71,46 @@
 
 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
     {% if dataset is null %}
-        <div class="messages warning">
-            <h2 class="element-invisible">Status message</h2>
-            Sorry, the dataset with Unique Dataset Identifier (UDI) {{ udi }} could not be found. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
-        </div>
-    {% elseif not is_granted('CAN_CREATE', dataset.datasetSubmission) and not is_granted('CAN_EDIT', dataset.datasetSubmission) %}
-        <div class="messages warning">
+        {% if udi is not null %}
+            <div class="messages warning">
                 <h2 class="element-invisible">Status message</h2>
-                Sorry, but you can only create or edit dataset submissions on datasets associated with your research groups.
+                Sorry, the dataset with Unique Dataset Identifier (UDI) {{ udi }} could not be found. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
             </div>
-    {% elseif dataset.dif.status == constant('Pelagos\\Entity\\DIF::STATUS_SUBMITTED') %}
-        <div class="messages warning">
-            <h2 class="element-invisible">Status message</h2>
-            The DIF has not yet been approved for dataset: {{ udi }}. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
-        </div>
-    {% elseif dataset.dif.status == constant('Pelagos\\Entity\\DIF::STATUS_UNSUBMITTED') %}
-        <div class="messages warning">
-            <h2 class="element-invisible">Status message</h2>
-            The DIF has not yet been submitted for dataset: {{ udi }}. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
-        </div>
-    {% else %}
-        <div class="messages status">
-            <h2 class="element-invisible">Status message</h2>
-            Dataset Identifier <b>'{{ udi }}'</b> was found. The latest version has been loaded.
-        </div>
+        {% endif %}
         {% set showform = true %}
+    {% else %}
+        {% if not is_granted('CAN_CREATE', dataset.datasetSubmission) and not is_granted('CAN_EDIT', dataset.datasetSubmission) %}
+            <div class="messages warning">
+                    <h2 class="element-invisible">Status message</h2>
+                    Sorry, but you can only create or edit dataset submissions on datasets associated with your research groups.
+                </div>
+            {% set dataset = null %}
+            {% set showform = true %}
+        {% elseif dataset.dif.status == constant('Pelagos\\Entity\\DIF::STATUS_SUBMITTED') %}
+            <div class="messages warning">
+                <h2 class="element-invisible">Status message</h2>
+                The DIF has not yet been approved for dataset: {{ udi }}. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
+            </div>
+        {% elseif dataset.dif.status == constant('Pelagos\\Entity\\DIF::STATUS_UNSUBMITTED') %}
+            <div class="messages warning">
+                <h2 class="element-invisible">Status message</h2>
+                The DIF has not yet been submitted for dataset: {{ udi }}. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
+            </div>
+        {% else %}
+            <div class="messages status">
+                <h2 class="element-invisible">Status message</h2>
+                Dataset Identifier <b>'{{ udi }}'</b> was found. The latest version has been loaded.
+            </div>
+            {% set showform = true %}
+        {% endif %}
     {% endif %}
 
     {% if showform|default %}
-        {% include 'PelagosAppBundle:DatasetSubmission:submission-form.html.twig' with {'datasetSubmission': dataset.datasetSubmission} %}
-    {% else %}
-        {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
+        {% if dataset is not null and dataset.datasetSubmission is not null %}
+            {% include 'PelagosAppBundle:DatasetSubmission:submission-form.html.twig' with {'datasetSubmission': dataset.datasetSubmission} %}
+        {% else %}
+            {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
+        {% endif %}
     {% endif %}
 {% else %}
 <div class="messages warning">
