--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-submission.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/dataset-submission.css
@@ -46,7 +46,7 @@
     padding: 5px;
 }
 
-input,select,textarea {
+input[type=text],select,textarea {
     width:90%;
 }
 
@@ -87,6 +87,14 @@ legend
 fieldset
 {
     border: 1px dotted #AAA;
+}
+
+.sftphidden {
+    display: none;
+}
+
+.validdsform {
+    display: none;
 }
 
 .cleair {
