--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
@@ -70,22 +70,19 @@
 <h1>Dataset Submission</h1>
 
 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-    {% if dataset is null %}
-        {% if udi is not null %}
+    {% if udi is null %}
+        {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
+    {% else %}
+        {% if dataset is null %}
             <div class="messages warning">
                 <h2 class="element-invisible">Status message</h2>
                 Sorry, the dataset with Unique Dataset Identifier (UDI) {{ udi }} could not be found. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
             </div>
-        {% endif %}
-        {% set showform = true %}
-    {% else %}
-        {% if not is_granted('CAN_CREATE', dataset.datasetSubmission) and not is_granted('CAN_EDIT', dataset.datasetSubmission) %}
+        {% elseif not is_granted('CAN_CREATE', dataset.datasetSubmission) and not is_granted('CAN_EDIT', dataset.datasetSubmission) %}
             <div class="messages warning">
                     <h2 class="element-invisible">Status message</h2>
                     Sorry, but you can only create or edit dataset submissions on datasets associated with your research groups.
                 </div>
-            {% set dataset = null %}
-            {% set showform = true %}
         {% elseif dataset.dif.status == constant('Pelagos\\Entity\\DIF::STATUS_SUBMITTED') %}
             <div class="messages warning">
                 <h2 class="element-invisible">Status message</h2>
@@ -101,15 +98,9 @@
                 <h2 class="element-invisible">Status message</h2>
                 Dataset Identifier <b>'{{ udi }}'</b> was found. The latest version has been loaded.
             </div>
-            {% set showform = true %}
-        {% endif %}
-    {% endif %}
-
-    {% if showform|default %}
-        {% if dataset is not null and dataset.datasetSubmission is not null %}
-            {% include 'PelagosAppBundle:DatasetSubmission:submission-form.html.twig' with {'datasetSubmission': dataset.datasetSubmission} %}
-        {% else %}
-            {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
+            {% if dataset.datasetSubmission is not null %}
+                {% include 'PelagosAppBundle:DatasetSubmission:submission-form.html.twig' with {'datasetSubmission': dataset.datasetSubmission} %}
+            {% endif %}
         {% endif %}
     {% endif %}
 {% else %}
@@ -119,5 +110,6 @@
 </div>
 <h1>Please log in first to use this form!</h1>
 {% endif %}
+
 <div class="modal" id="spinner"></div>
 {% endblock %}
