--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
@@ -78,21 +78,25 @@
                 <h2 class="element-invisible">Status message</h2>
                 Sorry, the dataset with Unique Dataset Identifier (UDI) {{ udi }} could not be found. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
             </div>
+            {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
         {% elseif not is_granted('CAN_CREATE', dataset.datasetSubmission) and not is_granted('CAN_EDIT', dataset.datasetSubmission) %}
             <div class="messages warning">
                     <h2 class="element-invisible">Status message</h2>
                     Sorry, but you can only create or edit dataset submissions on datasets associated with your research groups.
-                </div>
+            </div>
+            {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
         {% elseif dataset.dif.status == constant('Pelagos\\Entity\\DIF::STATUS_SUBMITTED') %}
             <div class="messages warning">
                 <h2 class="element-invisible">Status message</h2>
                 The DIF has not yet been approved for dataset: {{ udi }}. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
             </div>
+            {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
         {% elseif dataset.dif.status == constant('Pelagos\\Entity\\DIF::STATUS_UNSUBMITTED') %}
             <div class="messages warning">
                 <h2 class="element-invisible">Status message</h2>
                 The DIF has not yet been submitted for dataset: {{ udi }}. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
             </div>
+            {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
         {% else %}
             <div class="messages status">
                 <h2 class="element-invisible">Status message</h2>
@@ -104,11 +108,11 @@
         {% endif %}
     {% endif %}
 {% else %}
-<div class="messages warning">
-        <h2 class="element-invisible">Warning message</h2>
-        Please log in first!
-</div>
-<h1>Please log in first to use this form!</h1>
+    <div class="messages warning">
+            <h2 class="element-invisible">Warning message</h2>
+            Please log in first!
+    </div>
+    <h1>Please log in first to use this form!</h1>
 {% endif %}
 
 <div class="modal" id="spinner"></div>
