--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/submission-form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/submission-form.html.twig
@@ -10,31 +10,30 @@
             <ul>
                 <li>
                     <a class="dstablink" href="#ds-contact">Dataset Contact</a>
-                    <img>
+                    <img class="tabimg">
                 </li>
                 <li>
                     <a class="dstablink" href="#ds-information">Dataset Information</a>
-                    <img>
+                    <img class="tabimg">
                 </li>
                 <li>
                     <a class="dstablink" href="#ds-keywords">Keywords</a>
-                    <img>
+                    <img class="tabimg">
                 </li>
                 <li>
                     <a class="dstablink" href="#ds-extent">Data Extent</a>
-                    <img>
+                    <img class="tabimg">
                 </li>
                 <li>
                     <a class="dstablink" href="#ds-distribution">Distribution Info</a>
-                    <img>
+                    <img class="tabimg">
                 </li>
                 <li>
                     <a class="dstablink" href="#ds-metadata-contact">Metadata Contact</a>
-                    <img>
+                    <img class="tabimg">
                 </li>
                 <li>
                     <a class="dstablink" href="#ds-submit">Submit</a>
-                    <img>
                 </li>
             </ul>
 
