Proper message as per ticket.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/file-submit.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/file-submit.html.twig
@@ -2,7 +2,7 @@
 
 <div class="invaliddsform">
     <h1>
-        There are some error on the previous tabs, please correct those before submitting a file, then return here.
+        You have not completed all required fields.
     </h1>
 </div>
 
