Added button to DIF form to continue do Dataset Submission.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/dif.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/dif.html.twig
@@ -20,11 +20,11 @@
             ]
         )
     }}
-    
+
     {% stylesheets  '@PelagosAppBundle/Resources/public/css/dif.css' %}
         {{ add_css(asset_url) }}
     {% endstylesheets  %}
-    
+
     {{
         add_js(
             [
@@ -39,15 +39,21 @@
             ]
         )
     }}
-    
+
     {% javascripts '@PelagosAppBundle/Resources/public/js/common.js' %}
         {{ add_js(asset_url) }}
     {% endjavascripts %}
 
+    {% javascripts '@FOSJsRoutingBundle/Resources/public/js/router.js' %}
+        {{ add_js(asset_url) }}
+    {% endjavascripts %}
+
+    {{ add_js(path('fos_js_routing_js', { callback: 'fos.Router.setData' })) }}
+
     {% javascripts '@PelagosAppBundle/Resources/public/js/dif.js' %}
         {{ add_js(asset_url) }}
     {% endjavascripts %}
-   
+
 {% endblock %}
 
 
