--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/difForm.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DIF/difForm.html.twig
@@ -392,6 +392,7 @@
             <button type="button" id="btnSave" value="save">Save and Continue Later</button>
             <button type="button" id="btnSubmit" value="submit">Save and Submit to GRIIDC</button>
             <button style="display:none;" type="button" id="btnReqUnlock" value="requnlock">Request Unlock</button>
+            <button type="button" id="btnDS" value="submit">Continue to Dataset Submission</button>
             <button type="button" id="btnReset">Reset Form</button>
             <!--button type="button" id="btnTop">Top</button-->
         </center>
